fix formbackground overflow

--- a/src/css/formBackground.css
+++ b/src/css/formBackground.css
@@ -1,5 +1,8 @@
 .form-container {
   background: #7b2cbf;
+  height: 100vh;
+  overflow: hidden;
+  position: relative;
 }
 
 .circle {
